    * As above, but for SQLColAttributes and SQLColAttributesW; incorrect check for SQL_COLUMN_COUNT
    * Setting SQL_ATTR_TRACEFILE to null value results in different error
    * check_target_type allows driver-specific C data types for ODBC < 3.8
    * fix empty SQL_DIAG_SERVER_NAME field in DM-supplied diag recs
    * fix differing behaviour for an empty string DSN in SQLConnect/W

3rd-Aug-2015
2.3.4

    * Fix typo in the loading of the cursor lib, reports

	internal error, unexpected SHLIBEXT

2nd-Aug-2015
2.3.3

    * Reporting of logging state was broken in SQLGetConnectAttr
    * Fix incorrect text against HY007
    * Add -L option to isql to increase max column data display
    * Update automake toolset in svn
    * Add SQLFreeStmt( SQL_CLOSE ) function to SQLCancel
    * Allow SQL_NTS as a buffer length to SQLBindParameter
    * More manual pages for the tools
    * Fix buffer overrun returning long diagnostic from driver
    * Cross call between wide and ascii error reporting in the driver when needed
    * Fix some possible unchecked memory references after malloc
    * Prevent free( NULL ) in SQLGetDiagRecW
    * Add missing A->W conversion in SQLGetStmtOption
    * Allow iconv to convert strings into the driver with differing A and W lengthts (UTF)
    * SQLDataSourcesW takes buffer_lenghts as characters not bytes
    * Fix memory leak in SQLGetDiagRec
    * Allow setting custom non standard attributes via DMStmtAttr, format is:

        DMStmtAttr=[xxxx]=\yyy
        DMStmtAttr=[xxxx]={ssss}

        where xxxx = integer attribute to set, yyy is decimal numeric value and
        ssss is a string value

    * Add check in SQLGetData for null target value or negative buffer length
    * Fix memory leak when using the cursor lib
    * Catch incorrectly expanded SHLIBEXT
    * There was a bug in the ini caching, now fixed
    * More ODBC 3.80 additions (streaming parameters)
    * Check for NULL handle in __validate_xxx()