@@ -110,6 +110,7 @@
     * check_target_type allows driver-specific C data types for ODBC < 3.8
     * fix empty SQL_DIAG_SERVER_NAME field in DM-supplied diag recs
     * fix differing behaviour for an empty string DSN in SQLConnect/W
+    * Alter isql to return errors from SQLMoreResults
 
 3rd-Aug-2015
 2.3.4
